# PropertyCore

./: .gitignore  PRODUCT-LIBRARY.md  README.md
.github/: copilot-instructions.md
.github/workflows/: mobile-build.yml
Docs/: CONCEPT.md  DASHBOARD-PLAN.md  MOBILE-PLAN.md  PRODUCT-LIBRARY.md  UI-SCOPE.md
dashboard/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css  types.ts
dashboard/src/components/: ConfigSheet.tsx  Layout.tsx  Modal.tsx
dashboard/src/pages/: Areas.tsx  Devices.tsx  Floors.tsx  Login.tsx  Overview.tsx  Property.tsx  Rooms.tsx  Rules.tsx  Scenes.tsx  Schedules.tsx  Users.tsx
firmware/pc-rly-wifi/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/pc-rly-wifi/main/: CMakeLists.txt  config.h  config.h.example  main.c  mqtt_pc.c  mqtt_pc.h  nvs_config.c  nvs_config.h  provisioning.c  provisioning.h  relay.c  relay.h
meta-propertycore/conf/: layer.conf
meta-propertycore/conf/distro/: propertycore.conf
meta-propertycore/recipes-httpd/nginx/: nginx_%.bbappend
meta-propertycore/recipes-images/images/: propertycore-image-base.bb
meta-propertycore/recipes-propertycore/influxdb/: influxdb_1.8.10.bb
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/lib/: api.dart  app_state.dart  main.dart  models.dart  theme.dart
mobile/linux/: CMakeLists.txt
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mockups/: dashboard-mockup.html  mobile-app-mockup.html
(+75 files in other folders)
